Excluded test folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 HELP.md
 target/
-src/test/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
+!**/src/test/**/target/
+src/test/*
 
 ### STS ###
 .apt_generated
