--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+#Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/topdb
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+
+#Thymeleaf
 spring.thymeleaf.cache=false
