--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/test/*
 
 ### STS ###
 .apt_generated
@@ -32,4 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
-#/src/test/
+/src/test/
