Added spring dev tools properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+
+#Spring dev tools
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
