--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 #Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/topdb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Thymeleaf
