Commented the show-sql property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 #Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/topdb
