--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,42 @@
 #Hibernate
 spring:
   jpa:
-    show-sql: false
+    show-sql: true
   hibernate:
     ddl-auto: update
+  security:
+    user:
+      name: admin
+      password: pass
 
-#Datasource
+##Datasource
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/topdb
+#    username: root
+#    password: ${DB_PASSWORD}
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
+# Derby datasource
   datasource:
-    url: jdbc:mysql://localhost:3306/topdb
-    username: root
+    url: jdbc:derby:topDB;create=true
+    driver-class-name: org.apache.derby.jdbc.EmbeddedDriver
+    username: topdb
     password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      connectionTimeout: 50000
+      idleTimeout: 600000
+      maxLifetime: 1800000
+      maximum-pool-size: 5
+
+# Hibernate configuration
+jpa:
+  database-platform: org.hibernate.dialect.DerbyTenSevenDialect
+  hibernate:
+    ddl-auto: update
+  properties:
+    hibernate:
+      show-sql: true
+      dialect: org.hibernate.dialect.DerbyDialect
 
 #Thymeleaf
   thymeleaf:
@@ -19,6 +45,6 @@ spring:
 #Spring dev tools
   devtools:
     livereload:
-      enabled: true
+      enabled: false
     restart:
       enabled: true
